--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -19,10 +19,16 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@stomp/stompjs": "^5.1.0",
     "bootstrap": "^3.4.0",
     "core-js": "^2.5.4",
+    "net": "^1.0.2",
     "rxjs": "~6.3.3",
+    "sockjs": "^0.3.19",
+    "sockjs-client": "^1.3.0",
+    "stompjs": "^2.3.3",
     "tslib": "^1.9.0",
+    "webpack": "^4.28.4",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
